--- a/caramelo.html
+++ b/caramelo.html
@@ -96,7 +96,7 @@
 						<div class="input-group">
 							<input type="number" class="form-control" placeholder="Cantidad">
 							<div class="input-group-append">
-								<button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+								<button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
 							</div>
 						</div>
 					</div>
@@ -105,7 +105,7 @@
 			<div class="col-lg-6 mb-5" style="padding: 5px;">
 				<div class="row align-items-center">
 					<div class="col-sm-5">
-						<img class="img-fluid mb-3 mb-sm-0" src="img/fresaC.png" alt="">
+						<img class="img-fluid mb-3 mb-sm-0" src="img/fresaP.png" alt="">
 					</div>
 					<div class="col-sm-7">
 						<h4><i class="fa fa-truck service-icon"></i>Caramelo De Fresa</h4>
@@ -117,7 +117,7 @@
 						<div class="input-group">
 							<input type="number" class="form-control" placeholder="Cantidad">
 							<div class="input-group-append">
-								<button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+								<button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
 							</div>
 						</div>
 					</div>
@@ -138,7 +138,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/naranjaC.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/naranjaP.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-coffee service-icon"></i>Caramelo De Naranja </h4>
@@ -160,7 +160,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/limonC.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Caramelo De Limon</h4>
+                            <h4><i class="fa fa-award service-icon"></i>Caramelo De Limón</h4>
 							<p>6 unidades</p>
 							<p>18 gr.</p>
 							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/5.00</p>
@@ -182,7 +182,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                      </div>
@@ -190,10 +190,10 @@
 				 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/limonC.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/limonP.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Caramelo De Limon</h4>
+                            <h4><i class="fa fa-award service-icon"></i>Caramelo De Limón</h4>
 							<p>9 unidades</p>
 							<p>30 gr.</p>
 							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/9.00</p>
@@ -203,7 +203,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                      </div>
@@ -223,7 +223,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
@@ -232,7 +232,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/mielC.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/mielP.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-table service-icon"></i>Caramelo De Miel </h4>
@@ -244,7 +244,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
