--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
                     <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
-					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+		    <a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
+		    <a href="carrito.html" id="cart-icon" class="nav-item nav-link" style="color:#964B00"><i class="fas fa-shopping-cart"></i></a>
                 </div>
             </div>
         </nav>
