--- a/bar.html
+++ b/bar.html
@@ -97,57 +97,58 @@
                             <div class="input-group">
                                 <input type="number" class="form-control product-quantity" placeholder="Cantidad" min="1" step="1">
                                 <div class="input-group-append">
-                               <button onclick="handleAgregarAlCarrito('Energix - Bar De Cafe', 'img/barraE1.png', 7.00, this)">Agregar al carrito</button>
+                               <button class="btn btn-primary" type="button" onclick="handleAgregarAlCarrito('Energix - Bar De Cafe', 'img/barraE1.png', 7.00, this)"><i class="fas fa-shopping-cart"></i>Agregar al carrito</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Energix - Bar De Frutos Secos -->
+                <div class="col-lg-6 mb-5 product-container">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0 product-image" src="img/barraE2.png" alt="Energix - Bar De Frutos Secos">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4 class="product-name"><i class="fa fa-coffee service-icon"></i>Energix - Bar De Frutos Secos</h4>
+                            <p>Experimenta la frescura natural en cada bocado con nuestras deliciosas barras de frutas secas.</p>
+                            <p>150 gr.</p>
+                            <p class="product-price" style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
+                        </div>
+                        <div class="mt-3" style="margin:auto;">
+                            <div class="input-group">
+                                <input type="number" class="form-control product-quantity" placeholder="Cantidad" min="1" step="1">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="button" onclick="handleAgregarAlCarrito('Energix - Bar De Frutos Secos', 'img/barraE2.png', 7.00, this)"><i class="fas fa-shopping-cart"></i>Agregar al carrito</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
+                <!-- Energix - Bar De Miel -->
+                <div class="col-lg-6 mb-5 product-container">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0 product-image" src="img/barraE3.png" alt="Energix - Bar De Miel">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4 class="product-name"><i class="fa fa-award service-icon"></i>Energix - Bar De Miel</h4>
+                            <p>El dulce sabor de la naturaleza en cada barra de miel, un placer auténtico en cada momento.</p>
+                            <p>150 gr.</p>
+                            <p class="product-price" style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
+                        </div>
+                        <div class="mt-3" style="margin:auto;">
+                            <div class="input-group">
+                                <input type="number" class="form-control product-quantity" placeholder="Cantidad" min="1" step="1">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary" type="button" onclick="handleAgregarAlCarrito('Energix - Bar De Miel', 'img/barraE3.png', 7.00, this)"><i class="fas fa-shopping-cart"></i>Agregar al carrito</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/barraE2.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Bar De Frutos Secos </h4>							
-							<p>Experimenta la frescura natural en cada bocado con nuestras deliciosas barras de frutas secas.</p>
-							<p>150 gr.</p>
-							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
-                        </div>
-                        <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/barraE3.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Energix - Bar De Miel </h4>
-							<p>El dulce sabor de la naturaleza en cada barra de miel, un placer auténtico en cada momento.</p>
-							<p>150 gr.</p>
-							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
-							
-                        </div>
-                    </div>
-                        <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
-                                </div>
-                            </div>
-                        </div>
-                </div>
                 <!--
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
