--- a/about.html
+++ b/about.html
@@ -46,13 +46,14 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse" >
                 <div class="navbar-nav ml-auto p-4" >
-                    <a href="inicio.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
+                    <a href="index.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
-                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
-                    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+                    <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+		    <a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+		    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
+                    <a href="carrito.html" id="cart-icon" class="nav-item nav-link" style="color:#964B00"><i class="fas fa-shopping-cart"></i></a>
                 </div>
             </div>
         </nav>
